# F100cBot

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: F100cBot.hpp  discord-diplomacy.hpp
src/: discord_api.cpp  main.cpp
